Unified language level to Java 8